--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-fresh-refresh",
+  "name": "@joaosouz4dev/react-native-elastic-view",
   "version": "2.1.1",
   "description": "Custom pull to refresh",
   "source": "./index.tsx",
@@ -8,13 +8,13 @@
   "prepare": "tsc",
   "repository": {
     "type": "git",
-    "url": "https://github.com/4TWIGGERS/react-native-fresh-refresh"
+    "url": "git+https://github.com/joaosouz4dev/react-native-elastic-view.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
   },
-  "author": "4twiggers",
+  "author": "joaosouz4dev",
   "license": "ISC",
   "peerDependencies": {
     "react": "*",
@@ -29,5 +29,12 @@
     "typescript": "^4.5.4",
     "react-native-gesture-handler": "~2.2.0",
     "react-native-reanimated": "~2.3.1"
+  },
+  "bugs": {
+    "url": "https://github.com/joaosouz4dev/react-native-elastic-view/issues"
+  },
+  "homepage": "https://github.com/joaosouz4dev/react-native-elastic-view#readme",
+  "directories": {
+    "example": "example"
   }
 }
